<resources>
    <string name="app_name">4k Pictures</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="homes">Home</string>
    <string name="popular">Popular</string>
    <string name="random">Random</string>
    <string name="liked">Liked</string>
    <string name="history">History</string>
    <string name="about">About</string>
</resources>