<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"


    >


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/homes"
            android:icon="@drawable/icon_home"
            />
        <item
            android:id="@+id/popular"
            android:title="@string/popular"
            android:icon="@drawable/star"
            />
        <item
            android:id="@+id/random"
            android:title="@string/random"
            android:icon="@drawable/random"
            />
        <item
            android:id="@+id/liked"
            android:title="@string/liked"
            android:icon="@drawable/heart"
            />
        <item
            android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/step"
            />
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/about"
            />




    </group>

</menu>